@@ -1,3 +1,7 @@
+2010-10-07  Tolleiv Nietsch <nietsch@aoemedia.de> 
+
+	* Fixed issue: #15921: tx_templavoila_datastructureRepository->getAll() does not handle scope properly 
+
 2010-10-06  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Fixed issue: #15920: element icons don't show the id in their tooltips anymore 
